2002-10-01  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (InterpEval): correctly handle no args case.
	(New): autoload tbcload when it exists.

2002-06-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: call Init with eval to break out argv into args.

2002-06-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (Init): convert env(home) from 'C:' to 'C:/' if necessary.

2002-06-03  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl: fixed Retrieve to use the proxy info (Thoyts).
	Added code so that tkcon.tcl can be sourced in and used like a
	quasi-package.  Once sourced, you can do a 'package require tkcon'
	(there is no pkgIndex.tcl for it), and the first 'tkcon show' will
	initialize anything that is needed.
	(observe): corrected variables tracing to not allow duplicates.
	(dump): improved check for empty named arrays as well as locally
	aliased vars in var dumps.
	Use the 'fixed' font on unix by default.

2002-02-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (AddSlaveHistory): changed history to not add the
	command if it is the same as the previous command (it will still
	be evaluated).  (soderstrom)
	Added panedwindow and labelframe as recognized Tk commands.

2002-01-24  Jeff Hobbs  <jeffh@ActiveState.com>

	**** TKCON 2.3 RELEASE ****

	* tkcon.tcl: bumped to v2.3

2002-01-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* docs/procs.html:
	* tkcon.tcl (what): changed to differentiate between 'array' and
	'scalar' instead of just returning 'variable'.
	(which): called what in uplevel to get scope right.

2002-01-22  Jeff Hobbs  <jeffh@ActiveState.com>

	* tkcon.tcl (ExpandPathname): use a safer regsub to first unescape
	the str, then to protect it in the glob.
	(dir): Use -directory arg in 8.3+ for better results.

	* docs/idebug.html: added note about ? help at debug prompt.

	* tkcon.tcl (dir): prevented possible 'divide by zero' error.
	[Bug #496584]
	(Expand*): fixed ExpandPathname to better handle spaced pathnames.
	[Bug #497079]
