@@ -1,3 +1,10 @@
+2002-10-08  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkcon.tcl (tcl_unknown): allow ::namespace (:'s) to be
+	recognized. (koloska)
+	(MainInit): add option for overriding exit command.
+	(InitUI): add option to control the wm protocol for WM_DELETE_WINDOW.
+
 2002-10-01  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkcon.tcl (InterpEval): correctly handle no args case.
